RESOLVED FIXED184481
Non-ASCII characters are not correctly handled in data channel.
https://bugs.webkit.org/show_bug.cgi?id=184481
Summary Non-ASCII characters are not correctly handled in data channel.
jianjun.zhu
Reported 2018-04-10 18:11:00 PDT
Non-ASCII characters are not correctly handled in data channel.
Attachments
Patch (2.55 KB, patch)
2018-04-10 18:16 PDT, jianjun.zhu
no flags
Archive of layout-test-results from ews105 for mac-sierra-wk2 (3.00 MB, application/zip)
2018-04-10 19:27 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.35 MB, application/zip)
2018-04-10 19:49 PDT, EWS Watchlist
no flags
Patch (4.74 KB, patch)
2018-04-10 22:39 PDT, jianjun.zhu
no flags
jianjun.zhu
Comment 1 2018-04-10 18:16:25 PDT
EWS Watchlist
Comment 2 2018-04-10 18:17:42 PDT
Attachment 337665 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
jianjun.zhu
Comment 3 2018-04-10 18:25:38 PDT
This issue can be reproduced by sending emoji or Chinese characters between Safari and Chrome or between two PeerConnections in Safari. A similar issue can be found in Apple forum: https://discussions.apple.com/thread/8100630
youenn fablet
Comment 4 2018-04-10 18:59:04 PDT
Thanks Jianjun, would you be able to provide a test case in this patch.
youenn fablet
Comment 5 2018-04-10 19:07:22 PDT
Comment on attachment 337665 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337665&action=review > Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.cpp:51 > + return m_channel->Send({ rtc::CopyOnWriteBuffer(utf8Text.data(), utf8Text.length()), false }); Utf8Text is not really needed, can we remove it? > Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.cpp:100 > // FIXME: Ensure this is correct by adding some tests with non-ASCII characters. We should remove the fixme
EWS Watchlist
Comment 6 2018-04-10 19:27:28 PDT
Comment on attachment 337665 [details] Patch Attachment 337665 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/7276821 New failing tests: imported/w3c/web-platform-tests/webrtc/RTCDataChannel-send.html
EWS Watchlist
Comment 7 2018-04-10 19:27:30 PDT
Created attachment 337668 [details] Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8 2018-04-10 19:48:59 PDT
Comment on attachment 337665 [details] Patch Attachment 337665 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/7276836 New failing tests: imported/w3c/web-platform-tests/webrtc/RTCDataChannel-send.html
EWS Watchlist
Comment 9 2018-04-10 19:49:00 PDT
Created attachment 337669 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
youenn fablet
Comment 10 2018-04-10 20:00:17 PDT
Great, no need for new tests apparently. You might just need to update the corresponding -expected.txt file
jianjun.zhu
Comment 11 2018-04-10 20:01:59 PDT
Comment on attachment 337665 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337665&action=review >> Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.cpp:51 >> + return m_channel->Send({ rtc::CopyOnWriteBuffer(utf8Text.data(), utf8Text.length()), false }); > > Utf8Text is not really needed, can we remove it? We need to access text.utf8() twice if utf8Text is removed. I'm afraid converting character encoding one more time may cause extra overhead. >> Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.cpp:100 >> // FIXME: Ensure this is correct by adding some tests with non-ASCII characters. > > We should remove the fixme I'll remove it after test cases were added for non-ASCII characters.
youenn fablet
Comment 12 2018-04-10 20:39:29 PDT
> We need to access text.utf8() twice if utf8Text is removed. I'm afraid > converting character encoding one more time may cause extra overhead. Oh right! You can use auto instead of CString.
jianjun.zhu
Comment 13 2018-04-10 22:39:19 PDT
youenn fablet
Comment 14 2018-04-11 08:02:06 PDT
Comment on attachment 337679 [details] Patch Thanks!
WebKit Commit Bot
Comment 15 2018-04-11 08:28:43 PDT
Comment on attachment 337679 [details] Patch Clearing flags on attachment: 337679 Committed r230524: <https://trac.webkit.org/changeset/230524>
WebKit Commit Bot
Comment 16 2018-04-11 08:28:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 17 2018-04-11 08:29:26 PDT
jianjun.zhu
Comment 18 2018-04-11 08:47:11 PDT
Thanks for reviewing this patch.
Note You need to log in before you can comment on or make changes to this bug.